--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300:400,700&display=swap');
+
 html {
     width: 80%;
     margin: 0 auto;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Open Sans', sans-serif;
     font-size: 16px;
     line-height: 1.5;
 }
